// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproMessagingMenuBtn > Snapshots > renders the component with all properties filled in 1`] = `
<amelipro-btn-stub
  active="true"
  badge="false"
  badgebgcolor="ap-pink"
  badgecolor="ap-white"
  bordered="false"
  class="
    font-weight-semibold
    mb-1
    messaging-menu__btn
    text-h6
    text-none
    w-100
  "
  color="ap-blue-darken-2"
  disabled="false"
  hovercolor="ap-blue-darken-2"
  hoverunderline="false"
  href="#modified"
  iconbgcolor="transparent"
  iconbordered="false"
  iconleft="false"
  infoblock="false"
  minheight="3rem"
  size="60px"
  style="min-height: 50px;"
  text="false"
  textcolor="ap-white"
  to="/modified-home"
  type="button"
  underline="false"
  uniqueid="modified-unique-id"
></amelipro-btn-stub>
`;

exports[`AmeliproMessagingMenuBtn > Snapshots > renders the component with only required properties filled in 1`] = `
<amelipro-btn-stub
  active="false"
  badge="false"
  badgebgcolor="ap-pink"
  badgecolor="ap-white"
  bordered="false"
  class="
    font-weight-semibold
    mb-1
    messaging-menu__btn
    text-h6
    text-none
    w-100
  "
  color="ap-blue-darken-1"
  disabled="false"
  hovercolor="ap-blue-darken-2"
  hoverunderline="false"
  iconbgcolor="transparent"
  iconbordered="false"
  iconleft="false"
  infoblock="false"
  minheight="3rem"
  size="60px"
  style="min-height: 50px;"
  text="false"
  textcolor="ap-white"
  type="button"
  underline="false"
  uniqueid="required-unique-id"
></amelipro-btn-stub>
`;

exports[`AmeliproMessagingMenuBtn > render correctly 1`] = `
<button
  class="
    amelipro-btn
    amelipro-btn--style
    bg-ap-blue-darken-1
    elevation-0
    font-weight-bold
    font-weight-bold
    mb-1
    mb-1
    messaging-menu__btn
    messaging-menu__btn
    text-h6
    text-h6
    text-none
    text-none
    v-btn
    v-btn--density-default
    v-btn--flat
    v-btn--size-default
    v-btn--variant-flat
    v-theme--light
    w-100
    w-100
  "
  id="my-messaging-menu-btn-id"
  style="height: auto; min-height: 50px; color: #FFFFFF !important;"
  type="button"
>
  <span class="v-btn__overlay"></span>
  <span class="v-btn__underlay"></span>
  <!---->
  <span
    class="v-btn__content"
    data-no-activator=""
  >
    <span class="
      align-center
      amelipro-custom-btn
      d-flex
      flex-row
    ">
      <span class="
        align-center
        d-flex
        w-100
      ">
        <span
          class="
            amelipro-icon
            mr-2
          "
          id="my-messaging-menu-btn-id-icon"
        >
          <span
            aria-hidden="true"
            class="
              amelipro-custom-icon
              custom-color
            "
            focusable="false"
            role="img"
            style="color: #FFFFFF; height: 24px; width: 24px;"
          >
            <!-- v-if -->
          </span>
        </span>
        label du bouton
      </span>
      <!-- v-if -->
      <!-- v-if -->
      <!-- v-if -->
    </span>
  </span>
  <!---->
  <!---->
</button>
`;
